fixed text-wrap bug in logo and updated about section

--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ header{
 }
 .logo{
     color: white;
-    font-size: 1.3ream;
+    font-size: 1.3rem;
     font-weight: 600;
-    text-wrap: nonwrap;
+    text-wrap: nowrap;
     transition: 0.3s ease-in-out;
 }
 .logo:hover{
@@ -96,10 +96,39 @@ section{
     gap: 10rem;
 }
 .about img{
-    width: 30w;
+    width: 30vw;
     border-radius: 50%;
 }
 .info-box{
     display: flex;
     flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+.info-box h3{
+    font-size: 1.8rem;
+    font-weight: 500;
+    opacity: 0.8;
+}
+.info-box h1{
+    font-size: 4rem;
+    font-weight: 600;
+}
+.info-box span{
+    background: linear-gradient(to right, rgb(255, 0, 255), rgb(0, 157, 255));
+    background-clip: text;
+    color: transparent;
+    font-size: 2rem;
+}
+.btn-group{
+    display: flex;
+    gap: 1rem;
+}
+.btn{
+    border-radius: 3rem;
+    padding: 0.5rem 1.5rem;
+    border: 2px solid black;
+    cursor: pointer;
 }
